# github-user-info

./: LICENSE  README.md  pyproject.toml
src/github_user/: __init__.py  app.py  user_info.py
src/github_user/static/: style.css
src/github_user/templates/: base.html  content.html  form.html  forms.html  header.html  index.html
tests/: test_user_info.py
